Added Dijkstra, unit test, and CLI support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,7 @@ add_test(NAME bfs COMMAND test_bfs ${CMAKE_SOURCE_DIR}/graphs/tiny.txt)
 add_executable(test_dfs tests/test_dfs.cpp)
 target_link_libraries(test_dfs PRIVATE graphforge)
 add_test(NAME dfs COMMAND test_dfs ${CMAKE_SOURCE_DIR}/graphs/tiny.txt)
+
+add_executable(test_dijkstra tests/test_dijkstra.cpp)
+target_link_libraries(test_dijkstra PRIVATE graphforge)
+add_test(NAME dijkstra COMMAND test_dijkstra ${CMAKE_SOURCE_DIR}/graphs/weighted_tiny.txt)
